# Reciped_Flask

./: main.py  pyproject.toml
templates/: fried_egg.html
